improvements and pca component dataframe

--- a/Population_Segmentation/Pop_Segmentation_Exercise.ipynb
+++ b/Population_Segmentation/Pop_Segmentation_Exercise.ipynb
@@ -109,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get a list of objects in the bucket\n",
@@ -126,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# there is one file --> one key\n",
@@ -145,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get an S3 object by passing in the bucket and file name\n",
@@ -158,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# information is in the \"Body\" of the object\n",
@@ -177,6 +185,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "97a46770-dbe0-40ea-b454-b15bdec20f53"
     }
@@ -213,7 +222,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print out stats about data\n",
@@ -254,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# index data by 'State-County'\n",
@@ -264,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# drop the old State and County columns, and the CensusId column\n",
@@ -282,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# features\n",
@@ -307,6 +324,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "7e847244-7b42-490f-8945-46e234a3af75"
     }
@@ -338,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create a list of features that you want to compare or examine\n",
@@ -367,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# scale numerical features into a normalized range, 0-1\n",
@@ -416,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sagemaker import get_execution_role\n",
@@ -431,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get default bucket\n",
@@ -462,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# define location to store model artifacts\n",
@@ -518,7 +546,7 @@
     "# convert df to np array\n",
     "train_data_np = counties_scaled.values.astype('float32')\n",
     "\n",
-    "# convert to RecordIO format\n",
+    "# convert to RecordSet format\n",
     "formatted_train_data = pca_SM.record_set(train_data_np)"
    ]
   },
@@ -536,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -563,14 +593,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get the name of the training job, it's suggested that you copy-paste\n",
     "# from the notebook or from a specific job in the AWS console\n",
     "\n",
-    "training_job_name = 'pca-2019-03-06-19-14-06-608'\n",
-    "#training_job_name='<your_SageMaker_PCA_job_name_here>'\n",
+    "training_job_name='<your_SageMaker_PCA_job_name_here>'\n",
     "\n",
     "# where the model is saved, by default\n",
     "model_key = os.path.join(prefix, training_job_name, 'output/model.tar.gz')\n",
@@ -598,7 +629,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import mxnet as mx\n",
@@ -679,7 +712,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# looking at top 5 components\n",
@@ -744,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# test cell\n",
@@ -767,7 +804,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# features\n",
@@ -783,7 +822,7 @@
     "\n",
     "We can now examine the makeup of each PCA component based on **the weightings of the original features that are included in the component**. The following code shows the feature-level makeup of the first component.\n",
     "\n",
-    "Note that the components are again ordered from smallest to largest and so I am getting the correct rows by calling N_COMPONENTS-1 o get the top, 1, component."
+    "Note that the components are again ordered from smallest to largest and so I am getting the correct rows by calling N_COMPONENTS-1 to get the top, 1, component."
    ]
   },
   {
@@ -827,11 +866,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# display makeup of first component\n",
-    "display_component(v, counties_scaled.columns.values, component_num=2, n_weights=10)"
+    "num=1\n",
+    "display_component(v, counties_scaled.columns.values, component_num=num, n_weights=10)"
    ]
   },
   {
@@ -848,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -879,7 +923,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# check out the first item in the produced training features\n",
@@ -897,13 +943,12 @@
     "\n",
     "For each of our data points, get the top n component values from the list of component data points, returned by our predictor above, and put those into a new DataFrame.\n",
     "\n",
-    "You should end up with a DataFrame that looks something like the following (for the top 7 components):\n",
+    "You should end up with a DataFrame that looks something like the following:\n",
     "```\n",
-    "                     comp_1 \tcomp_2\t   comp_3\t  comp_4\t  comp_5\t   comp_6  \t  comp_7\n",
-    "                     \n",
-    "Alabama-Autauga\t0.025895\t0.040452\t-0.010824\t0.120480\t-0.088356\t 0.160527\t -0.060274\n",
-    "Alabama-Baldwin\t0.048137\t0.051573\t-0.068677\t-0.023092\t-0.145743\t0.185969\t -0.149684\n",
-    "Alabama-Barbour\t0.107730\t-0.065244\t0.093111\t0.297829\t 0.146258\t 0.296662\t  0.506202\n",
+    "                     c_1\t     c_2\t       c_3\t       c_4\t      c_5\t   ...\n",
+    "Alabama-Autauga\t-0.060274\t0.160527\t-0.088356\t 0.120480\t-0.010824\t...\n",
+    "Alabama-Baldwin\t-0.149684\t0.185969\t-0.145743\t-0.023092\t-0.068677\t...\n",
+    "Alabama-Barbour\t0.506202\t 0.296662\t 0.146258\t 0.297829\t0.093111\t...\n",
     "...\n",
     "```"
    ]
@@ -918,7 +963,7 @@
    "source": [
     "# create dimensionality-reduced data\n",
     "def create_transformed_df(train_pca, counties_scaled, n_top_components):\n",
-    "    ''' Return a datframe of datapoints with component features. \n",
+    "    ''' Return a dataframe of data points with component features. \n",
     "        The dataframe should be indexed by State-County and contain component values.\n",
     "        :param train_pca: A list of pca training data, returned by a PCA model.\n",
     "        :param counties_scaled: A dataframe of normalized, original features.\n",
@@ -936,20 +981,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can create a dataset where each county is described by the top n principle components that we analyzed earlier. Each of these components is a linear combination of the original feature space. We can interpret each of these components by analyzing the makeup of the component, shown previously."
+    "Now we can create a dataset where each county is described by the top n principle components that we analyzed earlier. Each of these components is a linear combination of the original feature space. We can interpret each of these components by analyzing the makeup of the component, shown previously.\n",
+    "\n",
+    "### Define the `top_n` components to use in this transformed data\n",
+    "\n",
+    "Your code should return data, indexed by 'State-County' and with as many columns as `top_n` components.\n",
+    "\n",
+    "You can also choose to add descriptive column names for this data; names that correspond to the component number or feature-level makeup."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# specify top n\n",
+    "## Specify top n\n",
     "top_n = None\n",
     "\n",
     "# call your function and create a new dataframe\n",
     "counties_transformed = create_transformed_df(train_pca, counties_scaled, n_top_components=top_n)\n",
+    "\n",
+    "## TODO: Add descriptive column names\n",
+    "\n",
     "\n",
     "# print result\n",
     "counties_transformed.head()"
@@ -971,7 +1027,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# delete predictor endpoint\n",
@@ -1057,7 +1115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1076,7 +1136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1119,7 +1181,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print cluster info for first data point\n",
@@ -1154,29 +1218,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# count up the points in each cluster\n",
     "cluster_df = pd.DataFrame(cluster_labels)[0].value_counts()\n",
     "\n",
     "print(cluster_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# another method of visualizing the distribution\n",
-    "# display a histogram of cluster counts\n",
-    "ax =plt.subplots(figsize=(6,3))\n",
-    "ax = plt.hist(cluster_labels, bins=8,  range=(-0.5, 6.5), color='blue', rwidth=0.5)\n",
-    "\n",
-    "title=\"Histogram of Cluster Counts\"\n",
-    "plt.title(title, fontsize=12)\n",
-    "plt.show()"
    ]
   },
   {
@@ -1198,7 +1248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# delete kmeans endpoint\n",
@@ -1229,7 +1281,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# download and unzip the kmeans model file\n",
@@ -1239,7 +1293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get the trained kmeans params using mxnet\n",
@@ -1260,7 +1316,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get all the centroids\n",
@@ -1284,7 +1342,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# generate a heatmap in component space, using the seaborn library\n",
@@ -1307,7 +1367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# what do each of these components mean again?\n",
@@ -1328,7 +1390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# add a 'labels' column to the dataframe\n",
@@ -1350,7 +1414,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get all counties with label == 1\n",
