minor update to instructions

--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -161,7 +161,7 @@
     "1. Import any extra libraries you need\n",
     "2. Define any additional model training hyperparameters using `parser.add_argument`\n",
     "2. Define a model in the `if __name__ == '__main__':` section\n",
-    "3. Train the model in that same section (you can write a helper function to do so)\n",
+    "3. Train the model in that same section\n",
     "\n",
     "Below, you can use `!pygmentize` to display an existing `train.py` file. Read through the code; all of your tasks are marked with `TODO` comments. \n",
     "\n",
