--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -201,7 +201,7 @@
     "\n",
     "When a custom model is constructed in SageMaker, an entry point must be specified. This is the Python file which will be executed when the model is trained; the `train.py` function you specified above. To run a custom training script in SageMaker, construct an estimator, and fill in the appropriate constructor arguments:\n",
     "\n",
-    "* **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
+    "* **entry_point**: The path to the Python script SageMaker runs for training.\n",
     "* **source_dir**: The path to the training script directory `train_sklearn` OR `train_pytorch`.\n",
     "* **role**: Role ARN, which was specified, above.\n",
     "* **train_instance_count**: The number of training instances (should be left at 1).\n",
