--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -147,7 +147,7 @@
     "\n",
     "## EXERCISE: Complete a training script \n",
     "\n",
-    "To implement a custom classifier, you'll need to complete a `train.py` script. You've been given the folders `train_sklearn` and `train_pytorch` which hold starting code for a custom Scikit-learn model and a PyTorch model, respectively. Each directory has a `train.py` training script. To complete this project **you only need to complete one of these scripts**; the script that is responsible for training your final model.\n",
+    "To implement a custom classifier, you'll need to complete a `train.py` script. You've been given the folders `source_sklearn` and `source_pytorch` which hold starting code for a custom Scikit-learn model and a PyTorch model, respectively. Each directory has a `train.py` training script. To complete this project **you only need to complete one of these scripts**; the script that is responsible for training your final model.\n",
     "\n",
     "A typical training script:\n",
     "* Loads training data from a specified directory\n",
@@ -171,11 +171,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# directory can be changed to: train_sklearn or train_pytorch\n",
-    "!pygmentize train_sklearn/train.py"
+    "# directory can be changed to: source_sklearn or source_pytorch\n",
+    "!pygmentize source_sklearn/train.py"
    ]
   },
   {
@@ -202,7 +204,7 @@
     "When a custom model is constructed in SageMaker, an entry point must be specified. This is the Python file which will be executed when the model is trained; the `train.py` function you specified above. To run a custom training script in SageMaker, construct an estimator, and fill in the appropriate constructor arguments:\n",
     "\n",
     "* **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
-    "* **source_dir**: The path to the training script directory `train_sklearn` OR `train_pytorch`.\n",
+    "* **source_dir**: The path to the training script directory `source_sklearn` OR `source_pytorch`.\n",
     "* **role**: Role ARN, which was specified, above.\n",
     "* **train_instance_count**: The number of training instances (should be left at 1).\n",
     "* **train_instance_type**: The type of SageMaker instance for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types.\n",
@@ -263,7 +265,7 @@
    "source": [
     "## EXERCISE: Deploy the trained model\n",
     "\n",
-    "After training, deploy your model to create a `predictor`. If you're using a PyTorch model, you'll need to create a trained `PyTorchModel` that accepts the trained `<model>.model_data` as an input parameter and points to the provided `train_pytorch/predict.py` file as an entry point. \n",
+    "After training, deploy your model to create a `predictor`. If you're using a PyTorch model, you'll need to create a trained `PyTorchModel` that accepts the trained `<model>.model_data` as an input parameter and points to the provided `source_pytorch/predict.py` file as an entry point. \n",
     "\n",
     "To deploy a trained model, you'll use `<model>.deploy`, which takes in two arguments:\n",
     "* **initial_instance_count**: The number of deployed instances (1).\n",
@@ -275,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -335,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# First: generate predicted, class labels\n",
