specify sagemaker kernels

--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -488,9 +488,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ai]",
+   "display_name": "conda_pytorch_p36",
    "language": "python",
-   "name": "conda-env-ai-py"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -502,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
