--- a/Project_Plagiarism_Detection/1_Data_Exploration.ipynb
+++ b/Project_Plagiarism_Detection/1_Data_Exploration.ipynb
@@ -214,9 +214,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
