--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -1203,9 +1203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ai]",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "conda-env-ai-py"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1217,7 +1217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
