small fixes and image

--- a/Payment_Fraud_Detection/Fraud_Detection_Exercise.ipynb
+++ b/Payment_Fraud_Detection/Fraud_Detection_Exercise.ipynb
@@ -14,6 +14,17 @@
     "\n",
     "The payment fraud data set (Dal Pozzolo et al. 2015) was downloaded from [Kaggle](https://www.kaggle.com/mlg-ulb/creditcardfraud/data). This has features and labels for thousands of credit card transactions, each of which is labeled as fraudulent or valid. In this notebook, we'd like to train a model based on the features of these transactions so that we can predict risky or fraudulent transactions in the future.\n",
     "\n",
+    "### Binary Classification\n",
+    "\n",
+    "Since we have true labels to aim for, we'll take a **supervised learning** approach and train a binary classifier to sort data into one of our two transaction classes: fraudulent or valid.  We'll train a model on training data and see how well it generalizes on some test data.\n",
+    "\n",
+    "The notebook will be broken down into a few steps:\n",
+    "* Loading and exploring the data\n",
+    "* Splitting the data into train/test sets\n",
+    "* Defining and training a LinearLearner, binary classifier\n",
+    "* Making improvements on the model\n",
+    "* Evaluating and comparing model test performance\n",
+    "\n",
     "### Making Improvements\n",
     "\n",
     "A lot of this notebook will focus on making improvements, as discussed in [this SageMaker blog post](https://aws.amazon.com/blogs/machine-learning/train-faster-more-flexible-models-with-amazon-sagemaker-linear-learner/). Specifically, we'll address techniques for:\n",
@@ -84,7 +95,7 @@
    "source": [
     "## Loading and Exploring the Data\n",
     "\n",
-    "Next, I am loading the data and unzipping into a directory `creditcardfraud`. This directory will hold one csv file of all the transaction data, `creditcard.csv`.\n",
+    "Next, I am loading the data and unzipping the data in the file `creditcardfraud.zip`. This directory will hold one csv file of all the transaction data, `creditcard.csv`.\n",
     "\n",
     "As in previous notebooks, it's important to look at the distribution of data since this will inform how we develop a fraud detection model. We'll want to know: How many data points we have to work with, the number and type of features, and finally, the distribution of data over the classes (valid or fraudulent)."
    ]
@@ -92,14 +103,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# only have to run once\n",
     "!wget https://s3.amazonaws.com/video.udacity-data.com/topher/2019/January/5c534768_creditcardfraud/creditcardfraud.zip\n",
-    "!unzip creditcardfraud"
+    "!unzip creditcardfraud\n"
    ]
   },
   {
@@ -159,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# call the function to calculate the fraud percentage\n",
@@ -236,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# manual test\n",
@@ -342,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -361,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -387,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# test one prediction\n",
@@ -474,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Metrics for simple, LinearLearner.\\n')\n",
@@ -484,15 +505,6 @@
     "                   test_features.astype('float32'), \n",
     "                   test_labels, \n",
     "                   verbose=True) # verbose means we'll print out the metrics\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can see that this model gets a very high accuracy of 99.9% ! But it still misclassifies about 30 (each) of our valid and fraudulent cases, which results in much lower values for recall and precision.\n",
-    "\n",
-    "Next, let's delete this endpoint and discuss ways to improve this model."
    ]
   },
   {
@@ -524,7 +536,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# delete the predictor endpoint \n",
@@ -563,8 +577,6 @@
    "source": [
     "## Improvement: Model Tuning\n",
     "\n",
-    "Accounting for class imbalance reduced the number of false negatives, but we can still add another improvement. In order to reduce the number of false positives, which we know would create a bad user experience for anyone using a particular credit card, we'll train our model and optimize for a higher recall.\n",
-    "\n",
     "Optimizing according to a specific metric is called **model tuning**, and SageMaker provides a number of ways to automatically tune a model.\n",
     "\n",
     "\n",
@@ -575,7 +587,7 @@
     "\n",
     "In this case, we want to build a model that has as many true positives and as few false negatives, as possible. This corresponds to a model with a high **recall**: true positives / (true positives + false negatives). \n",
     "\n",
-    "To aim for a specific metric, LinearLearner offers hyperparameter `binary_classifier_model_selection_criteria`, which is the the model evaluation criteria for the training dataset.A reference to this parameter is in [LinearLearner's documentation](https://sagemaker.readthedocs.io/en/stable/linear_learner.html#sagemaker.LinearLearnerPredictor). We'll also have to further specify the exact value we want to aim for; read more about the details of the parameters, [here](https://docs.aws.amazon.com/sagemaker/latest/dg/ll_hyperparameters.html).\n",
+    "To aim for a specific metric, LinearLearner offers the hyperparameter `binary_classifier_model_selection_criteria`, which is the model evaluation criteria for the training dataset. A reference to this parameter is in [LinearLearner's documentation](https://sagemaker.readthedocs.io/en/stable/linear_learner.html#sagemaker.LinearLearner). We'll also have to further specify the exact value we want to aim for; read more about the details of the parameters, [here](https://docs.aws.amazon.com/sagemaker/latest/dg/ll_hyperparameters.html).\n",
     "\n",
     "I will assume that performance on a training set will be within about 5% of the performance on a test set. So, for a recall of about 85%, I'll aim for a bit higher, 90%."
    ]
@@ -613,7 +625,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -635,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -646,7 +662,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Metrics for tuned (recall), LinearLearner.\\n')\n",
@@ -670,7 +688,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# delete the predictor endpoint \n",
@@ -723,7 +743,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -742,7 +764,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -753,7 +777,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Metrics for balanced, LinearLearner.\\n')\n",
@@ -777,7 +803,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# delete the predictor endpoint \n",
@@ -817,7 +845,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -830,7 +860,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time \n",
@@ -840,7 +872,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## IMPORTANT\n",
@@ -874,9 +908,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ai]",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "conda-env-ai-py"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -888,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   },
   "notice": "None."
  },
