--- a/Payment_Fraud_Detection/Fraud_Detection_Solution.ipynb
+++ b/Payment_Fraud_Detection/Fraud_Detection_Solution.ipynb
@@ -14,6 +14,17 @@
     "\n",
     "The payment fraud data set (Dal Pozzolo et al. 2015) was downloaded from [Kaggle](https://www.kaggle.com/mlg-ulb/creditcardfraud/data). This has features and labels for thousands of credit card transactions, each of which is labeled as fraudulent or valid. In this notebook, we'd like to train a model based on the features of these transactions so that we can predict risky or fraudulent transactions in the future.\n",
     "\n",
+    "### Binary Classification\n",
+    "\n",
+    "Since we have true labels to aim for, we'll take a **supervised learning** approach and train a binary classifier to sort data into one of our two transaction classes: fraudulent or valid.  We'll train a model on training data and see how well it generalizes on some test data.\n",
+    "\n",
+    "The notebook will be broken down into a few steps:\n",
+    "* Loading and exploring the data\n",
+    "* Splitting the data into train/test sets\n",
+    "* Defining and training a LinearLearner, binary classifier\n",
+    "* Making improvements on the model\n",
+    "* Evaluating and comparing model test performance\n",
+    "\n",
     "### Making Improvements\n",
     "\n",
     "A lot of this notebook will focus on making improvements, as discussed in [this SageMaker blog post](https://aws.amazon.com/blogs/machine-learning/train-faster-more-flexible-models-with-amazon-sagemaker-linear-learner/). Specifically, we'll address techniques for:\n",
@@ -84,7 +95,7 @@
    "source": [
     "## Loading and Exploring the Data\n",
     "\n",
-    "Next, I am loading the data and unzipping into a directory `creditcardfraud`. This directory will hold one csv file of all the transaction data, `creditcard.csv`.\n",
+    "Next, I am loading the data and unzipping the data in the file `creditcardfraud.zip`. This directory will hold one csv file of all the transaction data, `creditcard.csv`.\n",
     "\n",
     "As in previous notebooks, it's important to look at the distribution of data since this will inform how we develop a fraud detection model. We'll want to know: How many data points we have to work with, the number and type of features, and finally, the distribution of data over the classes (valid or fraudulent)."
    ]
@@ -466,7 +477,7 @@
    "outputs": [],
    "source": [
     "# get train/test data\n",
-    "(train_features, train_labels), (test_features, test_labels) = train_test_split(transaction_df, train_frac=0.7)"
+    "(train_features, train_labels), (test_features, test_labels) = train_test_split(transaction_df, train_frac=0.7)\n"
    ]
   },
   {
@@ -535,7 +546,7 @@
     "1. For regression tasks in which a linear line is fit to some data points, and you want to produce a predicted output value given some data point (example: predicting house prices given square area).\n",
     "2. For binary classification, in which a line is separating two classes of data and effectively outputs labels; either 1 for data that falls above the line or 0 for points that fall on or below the line.\n",
     "\n",
-    "<img src='notebook_ims/linear_separator.png' width=50% />\n",
+    "<img src='notebook_ims/linear_separator.png' width=40% />\n",
     "\n",
     "In this case, we'll be using it for case 2, and we'll train it to separate data into our two classes: valid or fraudulent. "
    ]
@@ -2110,7 +2121,7 @@
     "In this notebook, we'll look at different cases for tuning a model and make an optimization decision, accordingly.\n",
     "\n",
     "**2. Imbalanced training data**\n",
-    "* At the start of this notebook, we saw that only about 0.17% of the training data was labeled as fraudulent. So, even if a model labels **all** of our data as valid, it will still have a high accuracy. \n",
+    "* At the start of this notebook, we saw that only about 0.17% of the data was labeled as fraudulent. So, even if a model labels **all** of our data as valid, it will still have a high accuracy. \n",
     "* This may result in some overfitting towards valid data, which accounts for some **false negatives**; cases in which fraudulent data (1) is incorrectly characterized as valid (0).\n",
     "\n",
     "So, let's address these issues in order; first, tuning our model and optimizing for a specific metric during training, and second, accounting for class imbalance in the training set. \n"
@@ -2122,8 +2133,6 @@
    "source": [
     "## Improvement: Model Tuning\n",
     "\n",
-    "Accounting for class imbalance reduced the number of false negatives, but we can still add another improvement. In order to reduce the number of false positives, which we know would create a bad user experience for anyone using a particular credit card, we'll train our model and optimize for a higher recall.\n",
-    "\n",
     "Optimizing according to a specific metric is called **model tuning**, and SageMaker provides a number of ways to automatically tune a model.\n",
     "\n",
     "\n",
@@ -2134,7 +2143,7 @@
     "\n",
     "In this case, we want to build a model that has as many true positives and as few false negatives, as possible. This corresponds to a model with a high **recall**: true positives / (true positives + false negatives). \n",
     "\n",
-    "To aim for a specific metric, LinearLearner offers hyperparameter `binary_classifier_model_selection_criteria`, which is the the model evaluation criteria for the training dataset.A reference to this parameter is in [LinearLearner's documentation](https://sagemaker.readthedocs.io/en/stable/linear_learner.html#sagemaker.LinearLearnerPredictor). We'll also have to further specify the exact value we want to aim for; read more about the details of the parameters, [here](https://docs.aws.amazon.com/sagemaker/latest/dg/ll_hyperparameters.html).\n",
+    "To aim for a specific metric, LinearLearner offers the hyperparameter `binary_classifier_model_selection_criteria`, which is the model evaluation criteria for the training dataset. A reference to this parameter is in [LinearLearner's documentation](https://sagemaker.readthedocs.io/en/stable/linear_learner.html#sagemaker.LinearLearner). We'll also have to further specify the exact value we want to aim for; read more about the details of the parameters, [here](https://docs.aws.amazon.com/sagemaker/latest/dg/ll_hyperparameters.html).\n",
     "\n",
     "I will assume that performance on a training set will be within about 5% of the performance on a test set. So, for a recall of about 85%, I'll aim for a bit higher, 90%."
    ]
