--- a/Moon_Data/Moon_Classification_Exercise.ipynb
+++ b/Moon_Data/Moon_Classification_Exercise.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Moon Data Classification\n",
     "\n",
@@ -45,12 +43,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# sagemaker\n",
-    "import boto3\n",
-    "import sagemaker\n",
-    "from sagemaker import get_execution_role"
+    "%matplotlib inline"
    ]
   },
   {
@@ -59,7 +52,9 @@
    "source": [
     "## Generating Moon Data\n",
     "\n",
-    "Below, I have written code to generate some moon data, specifying the number of points and noise parameter to use for generation. Then I am displaying the resulting data."
+    "Below, I have written code to generate some moon data, using sklearn's [make_moons](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_moons.html) and [train_test_split](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html).\n",
+    "\n",
+    "I'm specifying the number of data points and a noise parameter to use for generation. Then, displaying the resulting data."
    ]
   },
   {
@@ -76,6 +71,7 @@
     "noise_val = 0.25\n",
     "\n",
     "# generate data\n",
+    "# X = 2D points, Y = class labels (0 or 1)\n",
     "X, Y = make_moons(num_pts, noise=noise_val)\n",
     "\n",
     "# Split into test and training data\n",
@@ -102,13 +98,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## SageMaker Resources\n",
     "\n",
-    "The below cell sores the SageMaker session and role (for creating estimators and models), and creates a default S3 bucket. After creating this bucket, you can upload any locally stored data to S3."
+    "The below cell stores the SageMaker session and role (for creating estimators and models), and creates a default S3 bucket. After creating this bucket, you can upload any locally stored data to S3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sagemaker\n",
+    "import boto3\n",
+    "import sagemaker\n",
+    "from sagemaker import get_execution_role"
    ]
   },
   {
@@ -133,9 +139,10 @@
    "source": [
     "### EXERCISE: Create csv files\n",
     "\n",
-    "Define a function that takes in x (features) and y (labels) and saves them to one `.csv` file at the path `data_dir/filename`.\n",
+    "Define a function that takes in x (features) and y (labels) and saves them to one `.csv` file at the path `data_dir/filename`. SageMaker expects `.csv` files to be in a certain format, according to the [documentation](https://docs.aws.amazon.com/sagemaker/latest/dg/cdf-training.html):\n",
+    "> Amazon SageMaker requires that a CSV file doesn't have a header record and that the target variable is in the first column.\n",
     "\n",
-    "It may be useful to use pandas to merge your features and labels into one DataFrame and then convert that into a `.csv` file."
+    "It may be useful to use pandas to merge your features and labels into one DataFrame and then convert that into a `.csv` file. When you create a `.csv` file, make sure to set `header=False`, and `index=False` so you don't include anything extraneous, like column names, in the `.csv` file."
    ]
   },
   {
@@ -159,9 +166,8 @@
     "    if not os.path.exists(data_dir):\n",
     "        os.makedirs(data_dir)\n",
     "    \n",
-    "    # first column is the labels and rest is features \n",
-    "    pd.concat([pd.DataFrame(y), pd.DataFrame(x)], axis=1)\\\n",
-    "             .to_csv(os.path.join(data_dir, filename), header=False)\n",
+    "    # your code here\n",
+    "    \n",
     "    \n",
     "    # nothing is returned, but a print statement indicates that the function has run\n",
     "    print('Path created: '+str(data_dir)+'/'+str(filename))"
@@ -210,7 +216,8 @@
     "prefix = 'sagemaker/moon-data'\n",
     "\n",
     "# upload to S3\n",
-    "input_data = sagemaker_session.upload_data(path=data_dir, bucket=bucket, key_prefix=prefix)"
+    "input_data = sagemaker_session.upload_data(path=data_dir, bucket=bucket, key_prefix=prefix)\n",
+    "print(input_data)"
    ]
   },
   {
@@ -235,24 +242,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "# Modeling\n",
     "\n",
     "Now that you've uploaded your training data, it's time to define and train a model!\n",
     "\n",
-    "In this notebook, you'll define and train a **custom PyTorch model**. This will be a neural network that performs binary classification. \n",
+    "In this notebook, you'll define and train a **custom PyTorch model**; a neural network that performs binary classification. \n",
     "\n",
     "### EXERCISE: Define a model in  `model.py`\n",
     "\n",
     "To implement a custom classifier, the first thing you'll do is define a neural network. You've been give some starting code in the directory `source`, where you can find the file, `model.py`. You'll need to complete the class `SimpleNet`; specifying the layers of the neural network and its feedforward behavior. It may be helpful to review the [code for a 3-layer MLP](https://github.com/udacity/deep-learning-v2-pytorch/blob/master/convolutional-neural-networks/mnist-mlp/mnist_mlp_solution.ipynb).\n",
     "\n",
     "This model should be designed to: \n",
-    "* Accept a number of `input_features` (the number of anonymized transaction features).\n",
-    "* Create some Linear, hidden layers of a desired size\n",
+    "* Accept a number of `input_dim` features\n",
+    "* Create some linear, hidden layers of a desired size\n",
     "* Return **a single output value** that indicates the class score\n",
     "\n",
     "The returned output value should be a [sigmoid-activated](https://pytorch.org/docs/stable/nn.html#sigmoid) class score; a value between 0-1 that can be rounded to get a predicted, class label.\n",
@@ -344,9 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Train the Estimator\n",
     "\n",
@@ -363,14 +366,12 @@
    "source": [
     "%%time \n",
     "# train the estimator on S3 training data\n",
-    "estimator.fit({'training': input_data})"
+    "estimator.fit({'train': input_data})"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Create a Trained Model\n",
     "\n",
@@ -432,9 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "## Evaluating Your Model\n",
@@ -517,9 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Delete the Endpoint\n",
     "\n",
@@ -560,6 +557,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Final Cleanup!\n",
+    "\n",
+    "* Double check that you have deleted all your endpoints.\n",
+    "* I'd also suggest manually deleting your S3 bucket, models, and endpoint configurations directly from your AWS console.\n",
+    "\n",
+    "You can find thorough cleanup instructions, [in the documentation](https://docs.aws.amazon.com/sagemaker/latest/dg/ex1-cleanup.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "# Conclusion\n",
     "\n",
@@ -569,9 +578,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ai]",
+   "display_name": "conda_pytorch_p36",
    "language": "python",
-   "name": "conda-env-ai-py"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -583,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
