minor copy updates

--- a/Time_Series_Forecasting/Energy_Consumption_Solution.ipynb
+++ b/Time_Series_Forecasting/Energy_Consumption_Solution.ipynb
@@ -575,7 +575,7 @@
     "\n",
     "### EXERCISE: Create training time series\n",
     "\n",
-    "Complete the `create_time_series` function, which should take in our list of complete time series data and return a list of truncated, training time series.\n",
+    "Complete the `create_training_series` function, which should take in our list of complete time series data and return a list of truncated, training time series.\n",
     "\n",
     "* In this example, we want to predict about a month's worth of data, and we'll set `prediction_length` to 30 (days).\n",
     "* To create a training set of data, we'll leave out the last 30 points of *each* of the time series we just generated, so we'll use only the first part as training data. \n",
@@ -2081,7 +2081,7 @@
     }
    ],
    "source": [
-    "# Starting my prediction at the beginning of 2011\n",
+    "# Starting my prediction at the beginning of 2010\n",
     "start_date = '2010-01-01'\n",
     "timestamp = '00:00:00'\n",
     "\n",
