downgrade sagemaker version to 1.72.0

--- a/Moon_Data/Moon_Classification_Exercise.ipynb
+++ b/Moon_Data/Moon_Classification_Exercise.ipynb
@@ -111,6 +111,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install sagemaker==1.72.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# sagemaker\n",
     "import boto3\n",
     "import sagemaker\n",
