--- a/Moon_Data/Moon_Classification_Solution.ipynb
+++ b/Moon_Data/Moon_Classification_Solution.ipynb
@@ -112,6 +112,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install sagemaker==1.72.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
