fixed deprecated code

--- a/Payment_Fraud_Detection/Fraud_Detection_Exercise.ipynb
+++ b/Payment_Fraud_Detection/Fraud_Detection_Exercise.ipynb
@@ -54,7 +54,8 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np \n",
-    "import pandas as pd \n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import boto3\n",
     "import sagemaker\n",
@@ -205,13 +206,13 @@
    "outputs": [],
    "source": [
     "# split into train/test\n",
-    "def train_test_split(transaction_df, train_frac= 0.7, seed=1):\n",
+    "def split_data(transaction_df, test_size= 0.3, random_state=1):\n",
     "    '''Shuffle the data and randomly split into train and test sets;\n",
     "       separate the class labels (the column in transaction_df) from the features.\n",
     "       :param df: Dataframe of all credit card transaction data\n",
     "       :param train_frac: The decimal fraction of data that should be training data\n",
     "       :param seed: Random seed for shuffling and reproducibility, default = 1\n",
-    "       :return: Two tuples (in order): (train_features, train_labels), (test_features, test_labels)\n",
+    "       :return: train_features, train_labels test_features, test_labels\n",
     "       '''\n",
     "    \n",
     "    # shuffle and split the data\n",
@@ -220,7 +221,7 @@
     "    test_features = None\n",
     "    test_labels = None\n",
     "    \n",
-    "    return (train_features, train_labels), (test_features, test_labels)\n"
+    "    return train_features, test_features, train_labels, test_labels\n"
    ]
   },
   {
@@ -241,7 +242,7 @@
    "outputs": [],
    "source": [
     "# get train/test data\n",
-    "(train_features, train_labels), (test_features, test_labels) = train_test_split(transaction_df, train_frac=0.7)"
+    "train_features, test_features, train_labels, test_labels = split_data(transaction_df, test_size=0.3, random_state=1)"
    ]
   },
   {
@@ -260,7 +261,7 @@
     "print()\n",
     "\n",
     "# take a look at first item and see that it aligns with first row of data\n",
-    "print('First item: \\n', train_features[0])\n",
+    "print('First item: \\n', train_features.iloc[:,0])\n",
     "print('Label: ', train_labels[0])\n",
     "print()\n",
     "\n",
